refactor: unify path management